test/error/E48.chifn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": []
}
